5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1593_1801.log
== TEST (2019-03-26 10:52:03) 
-- CODE:
va1=(input());
var2=int(input);

i=0;
while(i<var2){
	print(abra+var1)
	i=i+1;
}
-- ERROR:
File "XXXX", line 5
    while(i<var2){
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:52:37) 
-- CODE:
va1=(input());
var2=int(input);

i=0;
while(i < var2){
	print(abra+var1)
	i=i+1;
}
-- ERROR:
File "XXXX", line 5
    while(i < var2){
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:03) 
-- CODE:
va1=(input());
var2=int(input);

i=0;
while(i < var2)
{
	print(abra+var1)
	i=i+1;
}
-- ERROR:
File "XXXX", line 5
    while(i < var2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:53:22) 
-- CODE:
va1=(input());
var2=int(input);

i=0;
while (i =< var2)
{
	print(abra+var1)
	i=i+1;
}
-- ERROR:
File "XXXX", line 5
    while (i =< var2)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:54:36) 
-- CODE:
va1=input();
var2=int(input);

i=0;
while (i < var2)
{
	print(Abra+var1)
	i=i+1;
}
-- ERROR:
File "XXXX", line 5
    while (i < var2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:55:32) 
-- CODE:
va1=input();
var2=int(input);

var2*print(Abra+var1)
-- EXECUTION TIME:
0.158573
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 2, in <module>
    var2=int(input);
TypeError: int() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:35) 
-- CODE:
va1=input();
var2=int(input);

var2*print(Abra+var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input);
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:56:43) 
-- CODE:
va1=input();
var2=int(input);

print((''Abra''+var1)*var2)
-- ERROR:
File "XXXX", line 4
    print((''Abra''+var1)*var2)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:07) 
-- CODE:
va1=input();
var2=int(input);

print(('Abra'+var1)*var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input);
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:39) 
-- CODE:
va1=input();
var2=int(input());

print(('Abra'+var1)*var2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(('Abra'+var1)*var2)
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:54) 
-- CODE:
var1=input();
var2=int(input());

print(('Abra'+var1)*var2)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:58:08) 
-- CODE:
var1=input();
var2=int(input());

print(('Abra' +var1)*var2)
-- EXECUTION TIME:
0.148383
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
AbracarroAbracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:10) 
-- CODE:
var1=input();
var2=int(input());

print(('Abra' +var1)*var2)
-- OUTPUT:
AbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivroAbralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:58:26) 
-- CODE:
var1=input();
var2=int(input());

print(('Abra '+var1)*var2)
-- EXECUTION TIME:
0.166361
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carroAbra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:27) 
-- CODE:
var1=input();
var2=int(input());

print(('Abra '+var1)*var2)
-- OUTPUT:
Abra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:58:37) 
-- CODE:
var1=input();
var2=int(input());

print((' Abra '+var1)*var2)
-- EXECUTION TIME:
0.120273
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
